--- a/doc/fidogate.texi
+++ b/doc/fidogate.texi
@@ -2,7 +2,7 @@
 @c
 @c FIDOGATE documentation
 @c
-@c $Id: fidogate.texi,v 4.17 1996/12/01 11:28:13 mj Exp $
+@c $Id: fidogate.texi,v 4.18 1996/12/02 19:51:20 mj Exp $
 @c
 
 @setfilename fidogate.info
@@ -517,6 +517,9 @@ Default packing config file.
 @item DEF_ROUTING
 Default routing config file.
 
+@item DEF_HISTORY
+Default database of @code{^AMSGID}s for dupe checking.
+
 @item HOSTS
 @item ALIASES
 @item AREAS
@@ -524,9 +527,6 @@ Default routing config file.
 @item PACKING
 @item ROUTING
 Definitions from config file.
-
-@item HISTORY
-Database of @code{^AMSGID}s for dupe checking.
 
 @item LOG
 Default log file.
@@ -2516,6 +2516,9 @@ Use @i{file} instead of the default @code{packing} config file.
 
 @item Routing @i{file}
 Use @i{file} instead of the default @code{routing} config file.
+
+@item History @i{file}
+Use @i{file} instead of the default @code{history} database.
 
 @end table
 
