--- a/sendmail/README
+++ b/sendmail/README
@@ -1,12 +1,20 @@
 -*- Indented-Text -*-
 
-$Id: README,v 4.1 1996/09/22 12:23:28 mj Exp $
+$Id: README,v 4.2 1996/12/20 10:12:18 mj Exp $
 
 This directory contains the sendmail m4 configuration files from the
-RedHat 3.0.4 (Rembrandt) beta release with some additional config
-files for FIDOGATE support.
+RedHat 4.0 (Colgate) release with some additional config files for
+FIDOGATE support.
 
 See cf/*.mc for a sample setup with FIDOGATE.
 
 README.ORIG	is the original README describing the m4 config in detail
 cf.ORIG/	is the original cf/ subdirectory
+
+
+If you only want to copy the FIDOGATE specific files to you own
+sendmail m4 configuration tree, these are:
+
+mailer/ftn.m4	FIDOGATE ftn mailer definitions (ftn, ftni, ftna, ftno)
+mailer/ffx.m4	FIDOGATE ffx mailer definition
+cf/*		various example config files, mailertables etc.
